syntax = "proto3";

package partner.v1;

option go_package = "app/gen/proto/partner/v1;partnerv1";
import "proto/user/v1/user.proto";
import "proto/utils/v1/util.proto";

message RequestSearchPartner {
      int32 page = 1;
      int32 per_page = 2;
}

message ResponseSearchPartner{
      repeated user.v1.User users = 1;
      util.v1.Pagination pagination = 2;
}
message RequestSwipePartner {
    string partner_id = 1;
    bool is_interest = 2;
}
message ResponseSwipePartner {
    string partner_id = 1;
    bool is_interest = 2;
}

service PartnerService {
    rpc SearchPartner(RequestSearchPartner) returns (ResponseSearchPartner) {}
    rpc SwipePartner(RequestSwipePartner) returns (ResponseSwipePartner);
}