syntax = "proto3";

package user.v1;

option go_package = "app/gen/proto/user/v1;userv1";

enum GENDER {
      MALE = 0;
      FEMALE = 1;
}

message User {
  string id = 1;
  string created_at = 2;
  string updated_at = 3;
  string username = 4;
  GENDER gender = 5;
  string name = 6;
  string profile = 7;
  string status = 8;
  bool is_premium = 9;   
}

message PurchaseRequest {
  int32 payment_amount = 6;
}

message PurchaseResponse {
  bool success = 1;
  string message = 2;
}

service ServiceUser {
  rpc PurchasePremium(PurchaseRequest) returns (PurchaseResponse);
}